--- a/Nov2015/summary.tex
+++ b/Nov2015/summary.tex
@@ -2,4 +2,4 @@
 \label{summary}
 
 \input{Table3.jpg.tex}
-In summary, we believe that the European ESP programs need to be studied in greater detail, and awareness regarding these programs needs to be raised among the SCs. In general, the SCs in the United States seem to have a closer relationship with their ESPs than the ones in Europe. This can also be verified from Table \ref{fig:table3}, which shows that only 1 of the 9 respondents in Europe has had a discussion about programs with their ESP. As part of our future work, we want to explore the European ESP programs further, and also conduct a similar study in Japan.
+In summary, we believe that the European ESP programs for DM need to be studied in greater detail, and the awareness of the benefits for these programs needs to be raised among the SCs. In general, the SCs in the United States seem to have a closer relationship with their ESPs than the ones in Europe. This can also be verified from Table \ref{fig:table3}, which shows that only 1 of the 9 respondents in Europe has had a discussion about programs with their ESP. As part of our future work, we want to explore the European ESP programs further, the lack of such closer relationships, and also conduct a similar study in Japan, which has different institutional and electricity supply challenges.
