--- a/Nov2015/results.tex
+++ b/Nov2015/results.tex
@@ -1,6 +1,6 @@
 \section{Results: Europe and United States}
 \label{res}
-We noted that none of the European SCs communicated about grid integration and demand response techniques with their associated ESPs. Additionally, there was little interest in a tighter integration with the ESPs.
+We noted that none of the European SCs communicated about grid integration potential (e.g., demand response) and available flexibility with their associated ESPs. Additionally, there was little interest in a tighter integration with the ESPs.
 
 Figures \ref{fig:USload} and \ref{fig:EUload} depict the total load in megawatts for each of the respondents in the United States and in Europe. Most supercomputing sites have a total load of under 5 MW (sixteen out of twenty). Four of the surveyed supercomputing sites had a total load of over 10 MW. 
 \begin{figure}
