--- a/Nov2015/strategies.tex
+++ b/Nov2015/strategies.tex
@@ -13,6 +13,13 @@ Figure \ref{fig:seq} depicts data collected at three-minute intervals over three
 \end{center}
 \end{figure}
 
+\begin{figure}
+\begin{center}
+\frame{\includegraphics[scale=0.6]{figs/ORNLData.pdf}}
+\caption{Titan Supercomputer Power Swings}
+\label{fig:titan}
+\end{center}
+\end{figure}
 We observe similar trends with data from Titan, which is a supercomputer hosted at ORNL. TODO graph + analysis. \\
 
 
