--- a/Nov2015/execSummary_njb.tex
+++ b/Nov2015/execSummary_njb.tex
@@ -31,8 +31,9 @@ In this paper, we first present results from a detailed, quantitative survey-bas
 \input{strategies.tex}
 \input{results.tex}
 \input{intws.tex}
+\input{relwork.tex}
 \input{summary.tex}
 
 \bibliographystyle{plain}
-\bibliography{refs}
+\bibliography{hao,refs}
 \end{document}
