--- a/Nov2015/results.tex
+++ b/Nov2015/results.tex
@@ -1,6 +1,15 @@
 \section{Results: Europe and United States}
 \label{res}
 
+%There is moderate interest in grid integration strategies in the United States, and low interest in the same in Europe. From the point of view of SCs, strategies such as cutting jobs or load migration have little interest. \\
+
+%From our questionnaire, we concluded that neither European nor the United States sites are engaged with peak shedding, peak shifting or dynamic pricing programs at present. More sites in the United States have communicated with their ESPs regarding these programs. While both European and United States SCs are interested in dynamic pricing, there is mixed interest in peak shedding and peak shifting. The European sites are more interested in peak shedding than peak shifting, but the United States sites are more interested in peak shifting. \\
+%\input{Table2.jpg.tex}
+
+%Both European and US sites are interested in discussing renewables with their ESPs, but there is little interest in communicating with regards to the other possible methods. \\
+
+%We also asked our European respondents to indicate what might motivate them to communicate with their ESPs. The results are shown in Table \ref{fig:table2}. As can be noted from this figure, the main motivators are the financial incentives and the desire to be ``good citizens.''
+
 \begin{figure}[ht!]
 \begin{center}
 \frame{\includegraphics[scale=0.62]{figs/loadgraphUS.pdf}}
