--- a/Nov2015/strategies.tex
+++ b/Nov2015/strategies.tex
@@ -1,9 +1,6 @@
 \section{Motivation for Demand Management}
 \label{strategies}
-
-In this section, we motivate the need for demand management and make the case for a tighter integration and communication between ESPs and SCs. We also define \emph{strategies, programs, and methods}, which are techniques for demand management. 
-
-Figure \ref{fig:seq} depicts data collected at three-minute intervals over three days from the Sequoia supercomputer, which is the world's third fastest supercomputer. Sequoia is a 16.3 petaflops that is hosted at LLNL. The y-axis is the power consumed, and the x-axis represents the time samples. As can be noted from this figure, fluctuations of a few megawatts are fairly common. Some of these fluctuations may be related to maintenance cycles and could be scheduled. However, there are other times where the fluctuations are not scheduled in advance and may occur as a result of the workload that is executing on the supercomputer. This data clearly indicates that the SCs should forecast and communicate with their ESPs more often to discuss and address such power swings. \\
+We measured the power consumption of Sequoia, the world's third fastest supercomputer at 17.1 petaflops, hosted at LLNL. Sequoia is a BlueGene/Q design-based system with 98,304 16-core PowerPC A2 compute nodes that has a power rating of 7.9 MW. The data from Sequoia was collected at three-minute intervals over three days and the results can be seen from figure \ref{fig:seq}. Information about the workload being executed was not made available. The y-axis is the power consumed, and the x-axis represents the time samples.  As can be noted from this figure, fluctuations of a few megawatts are fairly common. Some of these fluctuations may be related to maintenance cycles and could be scheduled or forecasted. However, there are other times where the fluctuations are not scheduled in advance and may occur as a result of the workload that is executing on the supercomputer. \\
 
 \begin{figure}
 \begin{center}
@@ -20,15 +17,17 @@ Figure \ref{fig:seq} depicts data collected at three-minute intervals over three
 \label{fig:titan}
 \end{center}
 \end{figure}
-We observe similar trends with data from Titan, which is a supercomputer hosted at ORNL. TODO graph + analysis. \\
 
+We observe similar trends with data from Titan, which is the world's second-fastest supercomputer and is hosted at ORNL. Titan is a 17.6 petaflop system with a power rating of 8.2 MW. It comprises of 18,688 16-core AMD Opteron 6274 compute nodes, and each compute node has a NVIDIA Tesla K20X GPU. Figure \ref{fig:titan} shows data gathered from a identical WL-LSMS executions on the Titan supercomputer. WL-LSMS is a benchmark that performs thermodynamic calculations  \cite{WLLSMS}. The graph in Figure \ref{fig:titan} has instantaneous power in MW on the y-axis and the benchmark execution time on the x-axis. The data is reported for a CPU-only run as well as a GPU-enabled run. The power samples for the CPU-only run were collected every 8 minutes, where as the samples for the GPU-enabled run were reported every second. The red line represents the GPU-enabled run and the blue line represents the CPU-only run.  As can be noted from this data, huge power swings are observed on Titan, both in the case of CPU-only as well as GPU-enabled runs. 
+The energy efficiency improves by about seven times when the GPU is enabled as the application runs significantly faster. However, note that the peak power and power fluctuations are greater with the GPU-enabled run than they are with the CPU-only run.  Peak power increased by more than one megawatt and power variability increased by more than one half megawatt. 
 
-We now explain different actions used in demand management by SCs. We define \emph{strategies} as power management techniques used by SCs to manage power. Strategies may or may not improve energy efficiency. For example, \emph{Load Migration} is a strategy that SCs may use in response to an ESP's request, and while it helps manage power effectively, it does not impact the energy efficiency of the site. On the other hand, fine-grained power management techniques, such as using node-level power capping, or better job scheduling algorithms are likely to improve energy efficiency but may not be as useful in response to an ESP request. Almost all sites employ some power management strategies, especially the ones involving lighting, temperature, cooling, fine-grain power management and job scheduling. There is moderate interest in grid integration strategies in the United States, and low interest in the same in Europe. From the point of view of SCs, strategies such as cutting jobs or load migration have little interest. \\
+This behavior can be attributed to the fact that the GPU has very sophisticated power management features and is ready to go in an instant, ramping up both operational frequency and power. However, when it is idle, it almost powers itself down.  Regardless of the cause, the net effect is that less energy is used to get the same work done in the GPU-enabled case., but with higher power draw and greater power variability.
 
-\emph{Programs} are incentives offered by ESPs to their customers and to SCs in order to motivate them to help balance the electrical grid. Common examples include peak shedding, peak shifting and dynamic pricing. From our questionnaire, we concluded that neither European nor the United States sites are engaged with peak shedding, peak shifting or dynamic pricing programs at present. More sites in the United States have communicated with their ESPs regarding these programs. While both European and United States SCs are interested in dynamic pricing, there is mixed interest in peak shedding and peak shifting. The European sites are more interested in peak shedding than peak shifting, but the United States sites are more interested in peak shifting. \\
+Both these datasets clearly indicate that huge power fluctuations occur in real production systems, and this can affect the reliability of the ESP grid. It is thus imperative to understand how such variable power demands can be managed better, and how SCs can forecast and communicate with their ESPs more often to discuss and address such issues. 
 
-\input{Table2.jpg.tex}
+\subsection{Techniques for Demand Management}
+We now explain different approaches used in demand management by SCs. We define \emph{strategies} as power management techniques used by SCs to manage power and provide load flexibility. Strategies may or may not improve energy efficiency. For example, \emph{Load Migration} is a strategy that SCs may use in response to an ESP's request, and while it helps manage power effectively, it does not impact the energy efficiency of the site. On the other hand, \emph{fine-grained power management} techniques, such as using node-level power capping, or better job scheduling algorithms are likely to improve energy efficiency but may not be as useful in response to an ESP request. Almost all sites employ some power management strategies, especially the ones involving lighting, temperature, cooling, fine-grain power management and job scheduling. 
 
-\emph{Methods} are used by the ESPs to balance the electrical grid in the transmission and distribution phases. Examples of methods include regulation, frequency response, grid scale storage and use of renewable sources of energy. Both European and US sites are interested in discussing renewables with their ESPs, but there is little interest in communicating with regards to the other possible methods. \\
+\emph{Programs} are incentives offered by ESPs to their customers and to SCs in order to motivate them to help balance the electrical grid and perform power managment. Common examples include peak shedding, peak shifting and dynamic pricing. Peak shedding describes the action where SCs (or consumers) reduce their electricity consumption in response to a request from the ESP. The reduction in electricity consumption does not lead to an increase in consumption at a later point in time. Peak shifting, on the other hand, moves load from one time slot to another, in response to a request from the ESP. Lastly, dynamic pricing is a mechanism used by the ESP to incentivize an increase or decrease in consumption by varying the price of electricity over time.
 
-We also asked our European respondents to indicate what might motivate them to communicate with their ESPs. The results are shown in Table \ref{fig:table2}. As can be noted from this figure, the main motivators are the financial incentives and the desire to be ``good citizens.''
+\emph{Methods} are used by the ESPs to balance the electrical grid in the transmission and distribution phases. Examples of methods include regulation, frequency response, grid scale storage and use of renewable sources of energy. 
