--- a/Nov2015/Table2.jpg.tex
+++ b/Nov2015/Table2.jpg.tex
@@ -2,7 +2,7 @@
 \begin{center}
 \begin{tabular}{|l|c|c|c|c|}
 \hline
-\multicolumn{5}{|p{.72\textwidth}|}{\emph{Ques:} Please evaluate as high, medium or low the following motivations for your site's interest in pursuing a stronger relationship with your electric service utility/provider}\\
+\multicolumn{5}{|p{.72\textwidth}|}{\emph{Ques:} Please evaluate as high, medium or low the following motivations for your site's interest in pursuing a stronger relationship with your electricity service provider}\\
 \hline
 & Low & Medium & High & Rating Count \\
 \hline
