--- a/Nov2015/execSummary_njb.tex
+++ b/Nov2015/execSummary_njb.tex
@@ -36,4 +36,6 @@ In this paper, we first present results from a detailed, quantitative survey-bas
 
 \bibliographystyle{plain}
 \bibliography{hao,refs}
+
+\input{appendix.tex}
 \end{document}
